--- a/src/app/components/station-card/station-card.component.css
+++ b/src/app/components/station-card/station-card.component.css
@@ -29,7 +29,6 @@
   right: 10px;
 }
 
-
 .logo {
   width: 100%;
   height: 100px;
@@ -102,6 +101,7 @@ button:hover {
     0 calc(100% - 16px) #555,
     calc(100% - 16px) calc(100% - 16px) #555;
 }
+
 .audio-knob {
   width: 60px;
   height: 60px;
@@ -134,6 +134,16 @@ button:hover {
   width: 100px;
   accent-color: #1db954;
 }
+
+/* Cockpit-style glowing thumb */
+input[type='range']::-webkit-slider-thumb {
+  box-shadow: 0 0 6px #1db954;
+}
+
+input[type='range']::-moz-range-thumb {
+  box-shadow: 0 0 6px #1db954;
+}
+
 
 
   
