--- a/src/app/components/station-card/station-card.component.html
+++ b/src/app/components/station-card/station-card.component.html
@@ -1,6 +1,10 @@
 <div class="station-card">
   <img class="logo" [src]="logoSrc" (error)="onLogoError()" alt="Station Logo" />
-
+  <div class="vu-meter">
+    <div class="vu-bar left" [style.height.%]="isPlaying ? 30 + randomLevel() : 0"></div>
+    <div class="vu-bar right" [style.height.%]="isPlaying ? 30 + randomLevel() : 0"></div>
+  </div>
+  
   <div class="toggle-wrapper" (click)="toggleSwitch()">
     <div class="toggle-base">
       <div class="toggle-switch" [class.toggled]="isToggled"></div>
